styles/globals.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

.swiper {
  height: 100%;
  z-index: 50;
}

.swiper-wrapper {
  width: 500px !important;
  display: flex;
}

.swiper-slide {
  height: 100% !important;
  flex-shrink: initial;
}

.swiper-pagination-bullet {
  height: 50px;
  width: 50px;
  background-color: #bad985 !important;
  transform: scale(2);
  margin: 0px 6px !important;
}

::-webkit-scrollbar-thumb {
  background: #bad985;
  border-radius: 10px;
}

::-webkit-scrollbar-track {
  border-radius: 10px;
}

